--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ myst-nb = {version = "^1.1.0", python = "^3.9"}
 sphinx-autoapi = "^3.0.0"
 sphinx-rtd-theme = "^2.0.0"
 python-semantic-release = "^9.7.2"
+pytest = "^8.2.0"
+pytest-cov = "^5.0.0"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
